--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.1.0"
+    "cors": "^2.8.5",
+    "firebase-admin": "^7.4.0",
+    "firebase-functions": "^2.3.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "install": "^0.13.0",
+    "npm": "^6.12.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
