--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prettier": "^1.18.2",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.4",
     "vue-cli-plugin-vuetify": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
